@startuml classes_restaurant_app
set namespaceSeparator none
class "AddressEntity" as restaurant_app.store.entities.AddressEntity #AAAA00 {
  city : Mapped[str]
  country : Mapped[str]
  restaurants : Mapped[List['RestaurantEntity']]
  street : Mapped[str]
  zip : Mapped[str]
}
class "AddressModel" as restaurant_app.restaurant.models.AddressModel #BBCC33 {
  city : str
  country_code : str
  street : str
  zip : str
}
class "BaseEntity" as restaurant_app.store.entities.BaseEntity #AAAA00 {
  created : Mapped[datetime.datetime]
  id : Mapped[int]
  modified : Mapped[datetime.datetime]
}
class "BaseRepository" as restaurant_app.store.base_repository.BaseRepository #AAAA00 {
  get_session() -> AbstractContextManager[Session]
  {abstract}new_session(session: Session) -> Self
  sync()
  unit_of_work(action: Callable[[Session], List[Any]]) -> List[Any]
}
class "Cache" as restaurant_app.infrastructure.cache.Cache #99DDFF {
  {abstract}delete(key: str)
  {abstract}get(key: str) -> Any
  {abstract}put(key: str, value: Any)
}
class "Config" as restaurant_app.infrastructure.config.Config #99DDFF {
  DATABASE_ECHO : bool
  DATABASE_URI : str
  DEBUG : bool
  FLASK_ENV : str
  SECRET_KEY : str
  TESTING : bool
  load_from_data(data_map)
}
class "Container" as restaurant_app.infrastructure.container.Container #99DDFF {
  cache
  db
  menu_repo
  reservation_repo
  reservation_svc
  restaurant_repo
  restaurant_svc
  table_repo
  wiring_config
}
class "MemoryCache" as restaurant_app.infrastructure.memory_cache.MemoryCache #99DDFF {
  delete(key: str)
  get(key: str) -> Any
  put(key: str, value: Any)
}
class "MenuEntity" as restaurant_app.store.entities.MenuEntity #AAAA00 {
  category : Mapped[str]
  name : Mapped[str]
  orders : Mapped[List['OrderEntity']]
  price : Mapped[float]
  restaurant : Mapped['RestaurantEntity']
  restaurant_id : Mapped[int]
}
class "MenuModel" as restaurant_app.restaurant.models.MenuModel #BBCC33 {
  category : str
  id : int
  name : str
  price : float
}
class "MenuRepository" as restaurant_app.store.menu_repository.MenuRepository #AAAA00 {
  get_menu_by_name(name: str, res_id: int) -> MenuEntity
  get_menu_list(res_id: int) -> List[MenuEntity]
  new_session(session: Session) -> Self
  save(menu: MenuEntity) -> MenuEntity
}
class "OrderEntity" as restaurant_app.store.entities.OrderEntity #AAAA00 {
  menus : Mapped[List['MenuEntity']]
  table : Mapped['TableEntity']
  table_id : Mapped[int]
  total : Mapped[float]
  waiter : Mapped[str]
}
class "ReservationEntity" as restaurant_app.store.entities.ReservationEntity #AAAA00 {
  people : Mapped[int]
  reservation_date : Mapped[datetime.datetime]
  reservation_name : Mapped[str]
  reservation_number : Mapped[str]
  tables : Mapped[List['TableEntity']]
  time_from : Mapped[datetime.time]
  time_until : Mapped[datetime.time]
}
class "<color:red>ReservationError</color>" as restaurant_app.reservation.service.ReservationError #44BB99 {
  message
}
class "ReservationForm" as restaurant_app.reservation.forms.ReservationForm #44BB99 {
  h : HiddenField
  name : StringField
  num_people : IntegerField
  reservation_date : DateField
  restaurant_id : HiddenField
  time_from : TimeField
  time_until : TimeField
}
class "ReservationModel" as restaurant_app.reservation.models.ReservationModel #44BB99 {
  id : int
  name : str
  num_people : int
  number : str
  reservation_date : date
  reserved_table
  time_from : time
  time_until : time
  date_format() -> str
  reservation_time_format() -> str
}
class "ReservationRepository" as restaurant_app.store.reservation_repo.ReservationRepository #AAAA00 {
  delete(reservation_id: int)
  get_reservation_by_id(id: int) -> ReservationEntity
  get_reservation_by_number(number: int) -> ReservationEntity
  get_reservation_for_restaurant(restaurant_id: int) -> ReservationEntity
  get_table_reservations_for_date(date: datetime.date, table_id: int) -> List[ReservationEntity]
  is_reservation_number_in_use(number: str) -> bool
  new_session(session: Session) -> Self
  save(reservation: ReservationEntity) -> ReservationEntity
}
class "ReservationRequestModel" as restaurant_app.reservation.models.ReservationRequestModel #44BB99 {
  name : str
  num_people : int
  reservation_date : date
  restaurant_id : int
  time_from : time
  time_until : time
}
class "ReservationService" as restaurant_app.reservation.service.ReservationService #44BB99 {
  delete(reservation_id: int)
  get_reservation_for_restaurant(restaurant_id: int) -> List[ReservationModel]
  reserve(request: ReservationRequestModel) -> ReservationModel
}
class "RestaurantEntity" as restaurant_app.store.entities.RestaurantEntity #AAAA00 {
  address : Mapped['AddressEntity']
  address_id : Mapped[int]
  menus : Mapped[List['MenuEntity']]
  name : Mapped[str]
  open_days : Mapped[str]
  open_from : Mapped[datetime.time]
  open_until : Mapped[datetime.time]
  tables : Mapped[List['TableEntity']]
}
class "RestaurantForm" as restaurant_app.restaurant.forms.RestaurantForm #BBCC33 {
  city : StringField
  country : SelectField
  h : HiddenField
  id : HiddenField
  name : StringField
  open_friday : BooleanField
  open_from : TimeField
  open_monday : BooleanField
  open_saturday : BooleanField
  open_sunday : BooleanField
  open_thursday : BooleanField
  open_tuesday : BooleanField
  open_until : TimeField
  open_wednesday : BooleanField
  street : StringField
  zip : StringField
}
class "RestaurantModel" as restaurant_app.restaurant.models.RestaurantModel #BBCC33 {
  address
  id : int
  id_hash : str
  menus : List[MenuModel]
  name : str
  open_days : List[WeekDay]
  open_from : List[int]
  open_until : List[int]
  tables : List[TableModel]
  display_open_time() -> str
  open_from_format() -> str
  open_until_format() -> str
  table_count() -> int
}
class "RestaurantRepository" as restaurant_app.store.restaurant_repository.RestaurantRepository #AAAA00 {
  find_address(address: AddressEntity) -> AddressEntity
  find_restaurants_by_name_and_address(name: str, addr: AddressEntity) -> RestaurantEntity
  get_all_restaurants() -> List[RestaurantEntity]
  get_restaurant_by_id(id: int) -> RestaurantEntity
  new_session(session: Session) -> Self
  save(restaurant: RestaurantEntity) -> RestaurantEntity
}
class "RestaurantService" as restaurant_app.restaurant.service.RestaurantService #BBCC33 {
  get_all() -> List[RestaurantModel]
  get_by_id(id: int) -> RestaurantModel
  is_restaurant_open(restaurant_id: int, date: datetime.date, time_from: datetime.time, time_until: datetime.time) -> bool
  save(restaurant: RestaurantModel) -> RestaurantModel
}
class "SessionContextManager" as restaurant_app.store.base_repository.SessionContextManager #AAAA00 {
}
class "SqlAlchemyDatabase" as restaurant_app.store.database.SqlAlchemyDatabase #AAAA00 {
  create_database() -> None
  drop_database() -> None
  managed_session() -> Callable[..., AbstractContextManager[Session]]
}
class "TableEntity" as restaurant_app.store.entities.TableEntity #AAAA00 {
  orders : Mapped[List['OrderEntity']]
  reservations : Mapped[List['ReservationEntity']]
  restaurant : Mapped[RestaurantEntity]
  restaurant_id : Mapped[int]
  seats : Mapped[int]
  table_number : Mapped[str]
}
class "TableModel" as restaurant_app.restaurant.models.TableModel #BBCC33 {
  id : int
  number : str
  places : int
}
class "TableRepository" as restaurant_app.store.table_repository.TableRepository #AAAA00 {
  delete(id: int)
  get_table_by_id(id: int) -> TableEntity
  get_tables_for_restaurant(restaurant_id: int) -> List[TableEntity]
  get_tables_with_capacity(capacity: int, restaurant_id: int) -> List[TableEntity]
  new_session(session: Session) -> Self
  save(table: TableEntity) -> TableEntity
}
class "WeekDay" as restaurant_app.restaurant.models.WeekDay #BBCC33 {
  name
}
restaurant_app.infrastructure.memory_cache.MemoryCache --|> restaurant_app.infrastructure.cache.Cache
restaurant_app.store.entities.AddressEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.entities.MenuEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.entities.OrderEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.entities.ReservationEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.entities.RestaurantEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.entities.TableEntity --|> restaurant_app.store.entities.BaseEntity
restaurant_app.store.menu_repository.MenuRepository --|> restaurant_app.store.base_repository.BaseRepository
restaurant_app.store.reservation_repo.ReservationRepository --|> restaurant_app.store.base_repository.BaseRepository
restaurant_app.store.restaurant_repository.RestaurantRepository --|> restaurant_app.store.base_repository.BaseRepository
restaurant_app.store.table_repository.TableRepository --|> restaurant_app.store.base_repository.BaseRepository
restaurant_app.restaurant.models.AddressModel --* restaurant_app.restaurant.models.RestaurantModel : address
restaurant_app.restaurant.models.TableModel --* restaurant_app.reservation.models.ReservationModel : reserved_table
restaurant_app.store.base_repository.SessionContextManager --* restaurant_app.store.base_repository.BaseRepository : _session
restaurant_app.restaurant.service.RestaurantService --o restaurant_app.reservation.service.ReservationService : _restaurant_svc
restaurant_app.store.entities.AddressEntity --o restaurant_app.store.entities.RestaurantEntity : address
restaurant_app.store.menu_repository.MenuRepository --o restaurant_app.restaurant.service.RestaurantService : _menu_repo
restaurant_app.store.reservation_repo.ReservationRepository --o restaurant_app.reservation.service.ReservationService : _reservation_repo
restaurant_app.store.restaurant_repository.RestaurantRepository --o restaurant_app.restaurant.service.RestaurantService : _restaurant_repo
restaurant_app.store.table_repository.TableRepository --o restaurant_app.reservation.service.ReservationService : _table_repo
restaurant_app.store.table_repository.TableRepository --o restaurant_app.restaurant.service.RestaurantService : _table_repo
@enduml
